--- a/Roomie/appsettings.json
+++ b/Roomie/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AWS": {
+    "Profile": "roomie-profile",
+    "Region": "eu-north-1"
+  }
 }
