Add email support and ability to edit the bookings

--- a/Roomie/appsettings.json
+++ b/Roomie/appsettings.json
@@ -9,5 +9,9 @@
   "AWS": {
     "Profile": "roomie-profile",
     "Region": "eu-north-1"
+  },
+  "GmailOptions": {
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
