--- a/Roomie/Roomie.csproj
+++ b/Roomie/Roomie.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="6.2.2" />
     <PackageReference Include="AWSSDK.Core" Version="3.7.400.69" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.404.10" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
